<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.vitalate.engenhariasoftware.actCadCliente">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_cadCliApresentacao"
                android:id="@+id/lbl_cadedit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cadCliNome"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edt_cadCliNome"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cadCliDataNasc"
                android:id="@+id/textView4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edt_cadCliDia"
                    android:hint="Dia"
                    android:textAlignment="center"/>

                <EditText
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edt_cadCliMes"
                    android:hint="Mês"
                    android:textAlignment="center"/>

                <EditText
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edt_cadCliAno"
                    android:hint="Ano"
                    android:textAlignment="center"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cadCliSexo"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cadCliRdbFem"
                    android:id="@+id/rdb_cadCliFeminino"
                    android:checked="false"
                    android:layout_gravity="center_horizontal" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_cadCliRdbMasc"
                    android:id="@+id/rdb_cadCliMasculino"
                    android:checked="false"
                    android:layout_gravity="center_horizontal" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cadCliEnderecos"
                android:id="@+id/textView6" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <ListView
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:id="@+id/lst_endereco" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_cadCliEditar"
                android:id="@+id/btn_editarEndereco"
                android:onClick="editarEnderecoClicked" />
</LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cadCliAprenTel"
                android:id="@+id/textView11" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


        <ListView
                android:layout_width="230dp
                "
                android:layout_height="wrap_content"
                android:id="@+id/lst_telefone"
                android:choiceMode="singleChoice" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_cadCliEditTel"
                android:id="@+id/btn_editarTelefone"
                android:onClick="editarTelefoneClicked" />
</LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_cadCliCadastrar"
                android:id="@+id/btn_cadastrarCliente"
                android:onClick="cadastrarClicked"
                android:textColor="#ffffff"
                android:background="#71c267"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
